--- a/templates/edit_client.html
+++ b/templates/edit_client.html
@@ -49,6 +49,11 @@
             <input type="text" class="form-control" id="nif" name="nif" value="{{ current_user.nif }}" required>
         </div>
         <div class="mb-3">
+            <label for="price_per_day" class="form-label">Faixa de aluguer desejada</label>
+            <input type="number" step="0.01" class="form-control" id="price_per_day" name="{{ price_per_day }}"
+                required>
+        </div>
+        <div class="mb-3">
             <label for="password" class="form-label">Nova Senha</label>
             <input type="password" class="form-control" id="password" name="password">
         </div>
