implementação da classe Categoria

--- a/templates/editar_categoria.html
+++ b/templates/editar_categoria.html
@@ -9,6 +9,9 @@
             <input type="text" class="form-control" id="nome" name="nome" value="{{ categoria.nome }}" required>
         </div>
         <button type="submit" class="btn btn-primary">Salvar Alterações</button>
+        <div class="d-flex justify-content-end mt-4">
+            <a href="{{ url_for('admin_panel') }}" class="btn btn-secondary me-2">Cancelar</a>
+        </div>
     </form>
 </div>
 {% endblock %}
