implementação da classe Categoria

--- a/templates/admin_categorias.html
+++ b/templates/admin_categorias.html
@@ -23,5 +23,8 @@
         </li>
         {% endfor %}
     </ul>
+    <div class="d-flex justify-content-end mt-4">
+        <a href="{{ url_for('admin_panel') }}" class="btn btn-secondary me-2">Voltar</a>
+    </div>
 </div>
 {% endblock %}
