implementação da classe Categoria

--- a/templates/add_vehicle.html
+++ b/templates/add_vehicle.html
@@ -29,6 +29,9 @@
             <input type="number" step="0.01" class="form-control" id="price_per_day" name="price_per_day" required>
         </div>
         <div class="mb-3">
+            <input type="hidden" class="form-control" id="categoria" name="categoria" value="">
+        </div>
+        <div class="mb-3">
             <label for="last_legalization_date" class="form-label">Última Legalização</label>
             <input type="date" class="form-control" id="last_legalization_date" name="last_legalization_date" required>
         </div>
