--- a/templates/admin_categorias.html
+++ b/templates/admin_categorias.html
@@ -15,7 +15,7 @@
         {% for categoria in categorias %}
         <li>
             {{ categoria.nome }}
-            <a href="{{ url_for('editar_categoria', id=categoria.id) }}">Editar</a>
+            <a class="btn btn-sm btn-primary" href="{{ url_for('editar_categoria', id=categoria.id) }}">Editar</a>
             <form method="post" action="{{ url_for('deletar_categoria', id=categoria.id) }}" class="d-inline-block">
                 <button type="submit" class="btn btn-danger btn-sm"
                     onclick="return confirm('Tem certeza que deseja excluir esta categoria?')">Excluir</button>
