--- a/templates/base_admin.html
+++ b/templates/base_admin.html
@@ -36,7 +36,17 @@
             </div>
         </div>
     </nav>
-
+    {% with messages = get_flashed_messages() %}
+    {% if messages %}
+    <div class="container mt-4">
+        {% for message in messages %}
+        <div class="alert alert-{{ message[0] }}">
+            {{ message }}
+        </div>
+        {% endfor %}
+    </div>
+    {% endif %}
+    {% endwith %}
     <!-- Conteúdo da página -->
     {% block content %}{% endblock %}
 
