--- a/templates/view_vehicle.html
+++ b/templates/view_vehicle.html
@@ -12,21 +12,21 @@
             <p class="card-text"><strong>Categoria:</strong> {{ vehicle.categoria.nome }}</p>
             <p class="card-text"><strong>Status:</strong> {% if vehicle.status %}Disponível{% else %}Indisponível{%
                 endif%}</p>
-            <p class="card-text"><strong>Disponível a partir de:</strong> {{ vehicle.available_from }}</p>
+            <p class="card-text"><strong>Disponível a partir de:</strong> {{ vehicle.available_from.strftime('%d/%m/%Y') }}</p>
             <p class="card-text"><strong>Número de Utilizações:</strong> {% if vehicle.num_uses %}{{ vehicle.num_uses
                 }}{% else %} 0{% endif %}</p>
             <p class="card-text"><strong>Em Manutenção:</strong> {% if vehicle.in_maintenance %}Sim{% else %}Não{% endif
                 %}</p>
-            <p class="card-text"><strong>Última Manutenção:</strong> {{ vehicle.last_maintenance_date }}</p>
-            <p class="card-text"><strong>Próxima Manutenção:</strong> {{ vehicle.next_maintenance_date }}</p>
+            <p class="card-text"><strong>Última Manutenção:</strong> {{ vehicle.last_maintenance_date.strftime('%d/%m/%Y') }}</p>
+            <p class="card-text"><strong>Próxima Manutenção:</strong> {{ vehicle.next_maintenance_date.strftime('%d/%m/%Y') }}</p>
             <p class="card-text"><strong>Histórico de Manutenção:</strong></p>
             <ul>
                 {% for maintenance_date in vehicle.maintenance_history.split(';') if maintenance_date %}
                 <li>{{ maintenance_date }}</li>
                 {% endfor %}
             </ul>
-            <p class="card-text"><strong>Última Legalização:</strong> {{ vehicle.last_legalization_date }}</p>
-            <p class="card-text"><strong>Próxima Legalização:</strong> {{ vehicle.next_legalization_date }}</p>
+            <p class="card-text"><strong>Última Legalização:</strong> {{ vehicle.last_legalization_date.strftime('%d/%m/%Y') }}</p>
+            <p class="card-text"><strong>Próxima Legalização:</strong> {{ vehicle.next_legalization_date.strftime('%d/%m/%Y') }}</p>
             <p class="card-text"><strong>Histórico de Legalização:</strong></p>
             <ul>
                 {% for legalization_date in vehicle.legalization_history.split(';') if legalization_date %}
