--- a/templates/admin.html
+++ b/templates/admin.html
@@ -23,6 +23,11 @@
                             Gerenciar Categorias
                         </a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('list_clients') }}">
+                            Listar Clientes
+                        </a>
+                    </li>
                 </ul>
             </div>
         </nav>
