--- a/templates/list_vehicles.html
+++ b/templates/list_vehicles.html
@@ -90,7 +90,7 @@
         </tbody>
     </table>
     <div class="d-flex justify-content-end mt-4">
-        <a href="{{ url_for('list_vehicles') }}" class="btn btn-secondary me-2">Voltar</a>
+        <a href="{{ url_for('admin_panel') }}" class="btn btn-secondary me-2">Voltar</a>
     </div>
 </div>
 {% endblock %}
