Exportar listagem de veículos para csv

--- a/templates/list_vehicles.html
+++ b/templates/list_vehicles.html
@@ -6,6 +6,8 @@
 </div>
 <div class="container mt-4">
     <h2 class="mt-4">Lista de Veículos</h2>
+    <a href="{{ url_for('export_csv') }}" class="btn btn-primary">Exportar para CSV</a>
+
 
     <table class="table mt-2">
         <thead>
