--- a/templates/index.html
+++ b/templates/index.html
@@ -10,6 +10,10 @@
         <option {% if categoria=="Silver" %}selected{% endif %} value="Silver">Silver</option>
         <option {% if categoria=="Económico" %}selected{% endif %} value="Económico">Económico</option>
     </select>
+    <label for="data_inicio">Data de Início:</label>
+    <input type="date" name="data_inicio" id="data_inicio">
+    <label for="data_entrega">Data de Entrega:</label>
+    <input type="date" name="data_entrega" id="data_entrega">
     <button type="submit">Filtrar</button>
 </form>
 
