implementação de filtro de veículos disponíveis por período

--- a/templates/index.html
+++ b/templates/index.html
@@ -11,9 +11,9 @@
         <option {% if categoria=="Económico" %}selected{% endif %} value="Económico">Económico</option>
     </select>
     <label for="data_inicio">Data de Início:</label>
-    <input type="date" name="data_inicio" id="data_inicio">
+    <input type="date" name="data_inicio" id="data_inicio" value="data_inicio">
     <label for="data_entrega">Data de Entrega:</label>
-    <input type="date" name="data_entrega" id="data_entrega">
+    <input type="date" name="data_entrega" id="data_entrega" value="data_entrega">
     <button type="submit">Filtrar</button>
 </form>
 
