--- a/templates/reserve.html
+++ b/templates/reserve.html
@@ -52,6 +52,9 @@
             </form>
         </div>
     </div>
+    <div class="d-flex justify-content-end mt-4">
+        <a href="{{ url_for('index') }}" class="btn btn-secondary me-2">Voltar</a>
+    </div>
 </div>
 <script>
     document.addEventListener("DOMContentLoaded", function () {
