--- a/templates/vehicle_details.html
+++ b/templates/vehicle_details.html
@@ -41,5 +41,8 @@
             </div>
         </div>
     </div>
+    <div class="d-flex justify-content-end mt-4">
+        <a href="{{ url_for('index') }}" class="btn btn-secondary me-2">Voltar</a>
+    </div>
 </div>
 {% endblock %}
