implementação de filtro de veículos disponíveis por período

--- a/templates/index.html
+++ b/templates/index.html
@@ -51,7 +51,7 @@
     {% else %}
     <div class="row row-cols-1 row-cols-md-3 g-4"></div>
     <h2 class="mb-3">Carros</h2>
-    <h4 class="mb-3">Lamento, não há veículos disponíveis nesta categoria.</h4>
+    <h4 class="mb-3">Lamento, não há veículos disponíveis nesta categoria ou para este período.</h4>
     {% endif %}
     <br>
     <br>
