--- a/templates/vehicle_details.html
+++ b/templates/vehicle_details.html
@@ -37,12 +37,16 @@
             <p>Preço por dia: €{{ '%.2f' % veiculo.price_per_day }}</p>
             <p>Status: {% if veiculo.status %}Disponível{% else %}Indisponível{% endif %}</p>
             <div class="mt-4">
-                <a href="{{ url_for('reserve', id=veiculo.id) }}" class="btn btn-primary">Reservar</a>
+                <a href="{{ url_for('reserve', id=veiculo.id) }}" class="btn btn-primary">
+                    <i class="fas fa-calendar-plus"></i> Reservar
+                </a>
             </div>
         </div>
     </div>
     <div class="d-flex justify-content-end mt-4">
-        <a href="{{ url_for('index') }}" class="btn btn-secondary me-2">Voltar</a>
+        <a href="{{ url_for('index') }}" class="btn btn-secondary me-2">
+            <i class="fas fa-arrow-left"></i> Voltar
+        </a>
     </div>
 </div>
 {% endblock %}
