--- a/templates/base.html
+++ b/templates/base.html
@@ -57,6 +57,18 @@
         </div>
     </nav>
 
+    <!-- Apresentar mensagens flash quando existirem -->
+    {% with messages = get_flashed_messages() %}
+    {% if messages %}
+    <div class="container mt-4">
+        {% for message in messages %}
+        <div class="alert alert-{{ message[0] }}">
+            {{ message }}
+        </div>
+        {% endfor %}
+    </div>
+    {% endif %}
+    {% endwith %}
     <div class="container mt-4">
         {% block content %}
         {% endblock %}
