--- a/templates/base_admin.html
+++ b/templates/base_admin.html
@@ -40,6 +40,7 @@
             </div>
         </div>
     </nav>
+    <!-- Apresentar mensagens flash quando existirem -->
     {% with messages = get_flashed_messages() %}
     {% if messages %}
     <div class="container mt-4">
