--- a/templates/list_vehicles.html
+++ b/templates/list_vehicles.html
@@ -7,6 +7,8 @@
 <div class="container mt-4">
     <h2 class="mt-4">Lista de Veículos</h2>
     <a href="{{ url_for('export_csv') }}" class="btn btn-primary">Exportar para CSV</a>
+    <a href="{{ url_for('export_excel') }}" class="btn btn-primary">Exportar para Excel</a>
+
 
     <table class="table mt-2">
         <thead>
